--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 	padding-right: 2%;
 	padding-bottom: 2%;
 	padding-left: 2%;
-}
+    }
+    footer.site-footer {
+    	clear: both;	
+    }
     </style>
 </head>
 <body>
