--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     footer.site-footer {
     	clear: both;	
     }
+    footer p.left {
+    	float: left;	
+    }
+    footer p.right {
+    	float: right;	
+    }
+    }
     </style>
 </head>
 <body>
