--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style type="text/css">
     .main-content .projects {
 	float: left;
-	width: 31%;
+	width: 33%;
 	padding-top: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
@@ -45,15 +45,17 @@
     <hr>    
     <h2>The newest projects here are:</h2>
 
-
-	<div class="projects">
-   	  <p><a href="https://github.com/drewkinney/Primordial" target="_blank">Primordial</a> - A mobile first responsive wordpress theme built with Bootstrap 3.4.4</p>
+    <div class="projects">
+      <h3><a href="https://github.com/drewkinney/Primordial" target="_blank">Primordial</a></h3>
+      <p> - A mobile first responsive wordpress theme built with Bootstrap 3.4.4</p>
     </div>
     <div class="projects">
-      <p><a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a> - A collection of snippets from Bootstrap 3.4.4 to use in Dreamweaver CC.</p>
+      <h3></h3><a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a></h3>
+      <p> - A collection of snippets from Bootstrap 3.4.4 to use in Dreamweaver CC.</p>
     </div>
     <div class="projects">
-      <p><a href="https://github.com/drewkinney/eye_chart" target="_blank">EyeChart</a> - An idea for taking a string of text and convert it into a dymanic EyeChart</p>
+      <h3><a href="https://github.com/drewkinney/eye_chart" target="_blank">EyeChart</a></h3>
+      <p> - An idea for taking a string of text and convert it into a dymanic EyeChart</p>
     </div>
       
     <footer class="site-footer">
