--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <p> - A mobile first responsive wordpress theme built with Bootstrap 3.4.4</p>
     </div>
     <div class="projects">
-      <h3></h3><a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a></h3>
+      <h3><a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a></h3>
       <p> - A collection of snippets from Bootstrap 3.4.4 to use in Dreamweaver CC.</p>
     </div>
     <div class="projects">
