--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     <h2>The newest projects here are:</h2>
 
     <div class="projects">
-      <h3><a href="https://github.com/drewkinney/Primordial" target="_blank">Primordial</a></h3>
+      <h3><i class="fa fa-wordpress fa-2x"></i> <a href="https://github.com/drewkinney/Primordial" target="_blank">Primordial</a></h3>
       <p> - A mobile first responsive wordpress theme built with Bootstrap 3.4.4</p>
     </div>
     <div class="projects">
-      <h3><a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a></h3>
+      <h3><i class="fa fa-code fa-2x"></i> <a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a></h3>
       <p> - A collection of snippets from Bootstrap 3.4.4 to use in Dreamweaver CC.</p>
     </div>
     <div class="projects">
-      <h3><a href="https://github.com/drewkinney/eye_chart" target="_blank">EyeChart</a></h3>
+      <h3><i class="fa fa-eye-slash fa-2x"></i> <a href="https://github.com/drewkinney/eye_chart" target="_blank">EyeChart</a></h3>
       <p> - An idea for taking a string of text and convert it into a dymanic EyeChart</p>
     </div>
       
