--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
     <div class="projects">
       <h3><i class="fa fa-wordpress fa-2x"></i> <a href="https://github.com/drewkinney/Primordial" target="_blank">Primordial</a></h3>
-      <p> - A mobile first responsive wordpress theme built with Bootstrap 3.4.4</p>
+      <p> - A mobile first responsive wordpress theme built with <a href="http://getbootstrap.com/" target="_blank">Bootstrap 3.4.4</a></p>
     </div>
     <div class="projects">
       <h3><i class="fa fa-code fa-2x"></i> <a href="https://github.com/drewkinney/bootstrap-dreamweaver-snippets" target="_blank">Bootstrap Snippets</a></h3>
-      <p> - A collection of snippets from Bootstrap 3.4.4 to use in Dreamweaver CC.</p>
+      <p> - A collection of snippets from <a href="http://getbootstrap.com/" target="_blank">Bootstrap 3.4.4</a> to use in <a href="http://www.adobe.com/products/dreamweaver.html" target="_blank">Dreamweaver CC</a>.</p>
     </div>
     <div class="projects">
       <h3><i class="fa fa-eye-slash fa-2x"></i> <a href="https://github.com/drewkinney/eye_chart" target="_blank">EyeChart</a></h3>
